# mob

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: release-version-check.yml
client/: pyproject.toml
client/mob/: app.py  art.py  decorations.py  gems.py  leaderboard.py  mob.tcss  term_colors.py  xp.py
client/tests/: conftest.py  test_app_utils.py  test_art.py  test_decorations.py  test_gems.py  test_settings.py  test_xp.py
docs/: architecture.md
kennel/: Dockerfile  README.md  pyproject.toml
kennel/app/: db.py  main.py  models.py  ws.py
kennel/app/migrations/: 001_init.sql
mob/: app.py  art.py  atuin.py  mob.tcss  settings.py  update.py
scripts/: install.sh  mob-all.sh
