[project]
name = "mob"
version = "0.2.0"
description = "Tiny creatures who live at the bottom of your terminal."
requires-python = ">=3.11"
dependencies = [
    "textual>=0.80",
    "websockets>=12.0",
]

[project.scripts]
mob = "mob.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mob"]
